--- a/app/stylesheets/app.sass
+++ b/app/stylesheets/app.sass
@@ -30,6 +30,7 @@
 @import modules/modal
 @import modules/alerts
 @import modules/login
+@import modules/login-simple-form
 @import modules/navbar
 @import modules/left-sidebar
 @import modules/orders
