--- a/app/login.haml
+++ b/app/login.haml
@@ -10,12 +10,17 @@
           %a.login__navbar-logo{href: 'index.html'}
     .login__content.login__content--fullscreen
       .login__block
-        %form.login__form{action: 'login_errors.html'}
+        %form#new_operator_login_form.simple_form.login__form{:action => "login_errors.html"}
+          %div{:style => "display:none"}
+            %input{:name => "utf8", :type => "hidden", :value => "✓"}
+            %input{:name => "authenticity_token", :type => "hidden", :value => "f3+AwNIV/v1TGIIKecipog1+gaDhSeiAfvfGv/5AmlI="}
           .login__form-header Авторизация
-          %input.login__form-input{:placeholder => "Номер телефона", :required => "", :type => "tel"}
-          %input.login__form-input{:placeholder => "Пин-код", :required => "", :type => "password"}
+          .form-group.tel.required.operator_login_form_phone
+            %input#operator_login_form_phone.string.tel.required.form-control.form-control{:name => "operator_login_form[phone]", :placeholder => "ргн", :type => "tel"}
+          .form-group.string.required.operator_login_form_pin_code
+            %input#operator_login_form_pin_code.string.required.form-control{:name => "operator_login_form[pin_code]", :placeholder => "ргн", :type => "text"}
           .login__form-actions
-            %button.login__form-submit-btn Войти
+            %input.btn.login__form-submit-btn{:name => "commit", :type => "submit", :value => "Войти"}
         .row
           .col-sm-6
             %p.color-text-light
