bower paths + fix login forms

--- a/app/login.haml
+++ b/app/login.haml
@@ -12,15 +12,13 @@
       .login__block
         %form#new_operator_login_form.simple_form.login__form{:action => "login_errors.html"}
           %div{:style => "display:none"}
-            %input{:name => "utf8", :type => "hidden", :value => "✓"}
-            %input{:name => "authenticity_token", :type => "hidden", :value => "f3+AwNIV/v1TGIIKecipog1+gaDhSeiAfvfGv/5AmlI="}
           .login__form-header Авторизация
           .form-group.tel.required.operator_login_form_phone
-            %input#operator_login_form_phone.string.tel.required.form-control.form-control{:name => "operator_login_form[phone]", :placeholder => "ргн", :type => "tel"}
+            %input#operator_login_form_phone.string.tel.required.form-control.form-control{:placeholder => "ргн", :type => "tel"}
           .form-group.string.required.operator_login_form_pin_code
-            %input#operator_login_form_pin_code.string.required.form-control{:name => "operator_login_form[pin_code]", :placeholder => "ргн", :type => "text"}
+            %input#operator_login_form_pin_code.string.required.form-control{:placeholder => "ргн", :type => "text"}
           .login__form-actions
-            %input.btn.login__form-submit-btn{:name => "commit", :type => "submit", :value => "Войти"}
+            %input.btn.login__form-submit-btn{:type => "submit", :value => "Войти"}
         .row
           .col-sm-6
             %p.color-text-light
