--- a/app/stylesheets/modules/_left-sidebar.sass
+++ b/app/stylesheets/modules/_left-sidebar.sass
@@ -28,7 +28,7 @@ $left-sidebar-padding-top: 40px
     &.active
       & > a.left-sidebar__nav-link
         background-color: darken($gray-dark, 15%)
-        +link-colors(#fff)
+        +link-colors($brand-color-light)
 
 .left-sidebar__nav-link-icon
   font-size: 40px
