--- a/app/stylesheets/settings/_forms.sass
+++ b/app/stylesheets/settings/_forms.sass
@@ -93,7 +93,7 @@ input
     // libsass doesn't understand pseudoselectors
     //::-webkit-input-placeholder
     color: $text-color
-
+  +placeholder($text-color-lighter)
 
 input[type="checkbox"]
   display: none
