--- a/app/stylesheets/utilities/_utils.sass
+++ b/app/stylesheets/utilities/_utils.sass
@@ -1,3 +1,9 @@
+.center-block-container
+  +center-block-container
+.center-block-content
+  +center-block-content
+
+
 .hoverable-container
   .hoverable
     visibility: hidden
