--- a/app/index.haml
+++ b/app/index.haml
@@ -11,7 +11,7 @@
       .login__block
         -#.alert.alert-danger
         .login__form
-          - pages = ['signup.html', 'signup_errors.html', 'signup_pin.html', 'login.html', 'login_errors.html', 'reset_password.html', 'orders.html']
+          - pages = ['signup.html', 'signup_errors.html', 'signup_pin.html', 'login.html', 'login_errors.html', 'reset_password.html', 'orders.html', 'products.html']
           - for page of pages
             - page = pages[page]
             %h3
