--- a/app/stylesheets/app.sass
+++ b/app/stylesheets/app.sass
@@ -34,3 +34,5 @@
 @import modules/navbar
 @import modules/left-sidebar
 @import modules/orders
+@import modules/products
+@import modules/products-simple-form
