--- a/app/products_new.haml
+++ b/app/products_new.haml
@@ -7,7 +7,7 @@
 
     .app-left-sidebar
       %ul.left-sidebar__nav
-        - links = [{slug: 'info', icon: 'fa fa-info-circle', title: 'Что делать?'}, {slug: 'products', icon: 'fa fa-th-large', title: 'Товары', href: 'products.html'}, {slug: 'orders', icon: 'fa fa-shopping-cart', title: 'Заказы', href: 'orders.html'}, {slug: 'catalog', icon: 'fa fa-folder-open', title: 'Витрина'}]
+        - links = [{slug: 'info', icon: 'fa fa-info-circle', title: 'Что делать?'}, {slug: 'products', icon: 'fa fa-th-large', title: 'Товары', href: 'products.html'}, {slug: 'orders', icon: 'fa fa-shopping-cart', title: 'Заказы', href: 'orders.html'}, {slug: 'catalog', icon: 'fa fa-folder-open', title: 'Витрина'}, {slug: 'settings', icon: 'fa fa-cog', title: 'Настройка'}, {slug: 'shops', icon: 'fa fa-briefcase', title: 'Мои магазины'}, {slug: 'user', icon: 'fa fa-user', title: 'Олег С.'}]
         - for l of links
           - l = links[l]
           - if l.slug == 'products'
@@ -41,10 +41,22 @@
                     .col-sm-6.col-md-3
                       .form-group
                         %input.form-control{type: "text", placeholder: 'Цена'}
-                    .col-sm-6
+                    -#.col-sm-6
                       .form-group.login__form-group--icon-right
                         %input.form-control{:placeholder => "Категории", :required => "", :type => "text"}
-                        %i.login__form-input-icon--right= "+"
+                        %a.login__form-input-btn--right{href: '#', role: 'products__new-form-add-category-btn'}= "+"
+                    .col-sm-6
+                      .form-group.login__form-group--icon-right{role: 'products__new-form-select-category'}
+                        %select.products__new-form-select{placeholder: 'Your name'}
+                          %option{selected: 'selected', role: 'products__new-form-select-category-default'} Категория
+                          %option{role: 'products__new-form-select-category-new'} Добавить категорию
+                          - for i in [1..5]
+                            %option= "Категория #{i}"
+                        %a.login__form-input-btn--right{href: '#', role: 'products__new-form-add-category-btn'}= "+"
+                      .form-group.login__form-group--icon-right{role: 'products__new-form-new-category'}
+                        %input.form-control{:placeholder => "Новая категория", :required => "", :type => "text"}
+                        %a.login__form-input-btn--right{href: '#', role: 'products__new-form-new-category-close'} &times;
+
                   .row
                     .col-sm-6.col-md-3
                       .form-group
@@ -57,9 +69,6 @@
                         -#input.btn.form-control{type: "text", placeholder: 'Добавить размеры и цвета'}
                         .btn.form-control
                           Добавить размеры и цвета
-                  .products__new-form-actions
-                    %button.products__new-form-submit-btn{"data-disable-with" => "Сохраняем...", :type => "submit"}
-                      Сохранить
                 .col-md-4
                   .products__list-item-new
                     %img.products__list-item-image{ src: "images/product-add.svg" }
@@ -67,3 +76,7 @@
                       Выберите или перетащите
                       %br
                       фотографии
+              .products__new-form-actions
+                %button.products__new-form-submit-btn{"data-disable-with" => "Сохраняем...", :type => "submit"}
+                  Сохранить
+
