header navbar, empty product

--- a/app/products.haml
+++ b/app/products.haml
@@ -19,19 +19,20 @@
               %i.left-sidebar__nav-link-icon{class: "#{l.icon} nav-link-icon-#{l.slug}"}
               .left-sidebar__nav-link-title= l.title
               .clearfix
+    .app-header-navbar
+      .container-fluid
+        .col-lg-10.col-lg-offset-1
+          %h1.header-navbar__title.pull-left Товары
+          %h1.header-navbar__brand.pull-right Field&Rag
+          %form.pull-right
+            %input.form-control.orders-list__search-input{type: 'search', placeholder: 'Найти название, номер, артикул'}
+          .clearfix
+
     .app-main-content
       .container-fluid
         .col-lg-10.col-lg-offset-1
           .orders-list
-            .pull-right
-              %h1 Field&Rag
-            .clearfix
             .orders-list__list
-              %h1.orders-list__title.pull-left Товары
-              %form.pull-right
-                %input.form-control.orders-list__search-input{type: 'search', placeholder: 'Найти название, номер, артикул'}
-              .clearfix
-              %hr
               %form.form-inline
                 .form-group
                   %span.text-muted Категория
