--- a/app/stylesheets/modules/_navbar.sass
+++ b/app/stylesheets/modules/_navbar.sass
@@ -3,3 +3,19 @@
   @extend .navbar-fixed-top
   background: none
 
+.app-header-navbar
+  background-color: $header-navbar-background
+  border-bottom: 1px solid $gray-lighter
+
+.header-navbar__title
+  font-size: $font-size-h1*0.85
+  text-transform: uppercase
+  letter-spacing: 1px
+  padding-top: 3px
+
+.header-navbar__title,
+.header-navbar__brand
+  margin-top: 0
+
+.header-navbar__brand
+  margin-left: 25px
