--- a/app/stylesheets/settings/_variables.sass
+++ b/app/stylesheets/settings/_variables.sass
@@ -70,10 +70,14 @@ $navbar-default-link-hover-bg:             transparent
 $navbar-default-link-active-color:         $brand-color
 $navbar-default-link-active-bg:            transparent
 
+$header-navbar-background: #f1f1f1
+$header-navbar-height: 78px
+
 $hr-border: $gray-lighter
 
 $input-background-inactive: rgba(#fff, 0.85)
 
 $left-sidebar-z-index: 300
+$header-navbar-z-index: 400
 
 
