--- a/app/stylesheets/modules/_products-simple-form.sass
+++ b/app/stylesheets/modules/_products-simple-form.sass
@@ -29,6 +29,8 @@
         border: 1px solid $line-color
       &:focus
         border: 1px solid $yellow
+    select.form-control
+      @extend .login__form-select
 
     &.has-error
       .form-control
