--- a/app/orders.haml
+++ b/app/orders.haml
@@ -19,18 +19,20 @@
               %i.left-sidebar__nav-link-icon{class: "#{l.icon} nav-link-icon-#{l.slug}"}
               .left-sidebar__nav-link-title= l.title
               .clearfix
+    .app-header-navbar
+      .container-fluid
+        .col-lg-10.col-lg-offset-1
+          %h1.header-navbar__title.pull-left Заказы
+          %h1.header-navbar__brand.pull-right Field&Rag
+          %form.pull-right
+            %input.form-control.orders-list__search-input{type: 'search', placeholder: 'Найти название, номер, город'}
+          .clearfix
+
     .app-main-content
       .container-fluid
         .col-lg-10.col-lg-offset-1
           .orders-list
-            .pull-right
-              %h1 Field&Rag
-            .clearfix
             .orders-list__list
-              %h1.orders-list__title.pull-left Заказы
-              %form.pull-right
-                %input.form-control.orders-list__search-input{type: 'search', placeholder: 'Найти название, номер, город'}
-              .clearfix
               - order_states = {new: {slug: 'new', title: 'Новый'}, delivery: {slug: 'delivery', title: 'Доставка'}, cancelled: {slug: 'cancelled', title: 'Отменён'}, paused: {slug: 'paused', title: 'Пауза'}}
               %table.table.orders-list__table
                 %thead.orders-list__table-header
