Fix текущая категория в SuperSelect

--- a/app/products_new.haml
+++ b/app/products_new.haml
@@ -44,7 +44,7 @@
                       .form-group
                         %input.form-control{type: "text", placeholder: 'Цена'}
                     .col-sm-6
-                      %div( data-react-class="SuperSelect" data-react-props='{"name": "category_name", "options":["Молоко", "Морепродукты", "Мопеды", "Брилианты", "Категория 2"]}')
+                      %div( data-react-class="SuperSelect" data-react-props='{"name": "category_name", "value": "Кефир", "options":["Молоко", "Морепродукты", "Мопеды", "Брилианты", "Категория 2"]}')
 
                   .row
                     .col-sm-6.col-md-3
