--- a/app/stylesheets/sass/settings/_layout.sass
+++ b/app/stylesheets/sass/settings/_layout.sass
@@ -26,7 +26,7 @@ body
   position: fixed
   top: 0
   bottom: 0
-  height: 100%
+  //height: 100%
   @extend %block-padding
 
 .app-left-sidebar,
@@ -47,6 +47,7 @@ body
   top: $header-navbar-height
   left: $left-sidebar-width
   right: 0
+  bottom: 0
   overflow:
     y: auto
 
