--- a/app/stylesheets/sass/settings/_forms.sass
+++ b/app/stylesheets/sass/settings/_forms.sass
@@ -187,7 +187,7 @@ input[type="radio"]
   +appearance(none)
   line-height: 1
   //padding: 0.7em 3em 0.7em 1em
-  padding: $plain-input-padding
+  padding: 0 $plain-input-padding
   cursor: pointer
   &, &:hover, &:focus
     border-bottom: 1px solid $line-color
