Переименовал /app/images в /app/assets

--- a/app/orders.haml
+++ b/app/orders.haml
@@ -99,7 +99,7 @@
                   .media.order-products__list-item
                     .pull-left
                       .media-object
-                        %img{src: 'images/product-thumb.png', width: 34, height: 34}
+                        %img{src: 'assets/product-thumb.png', width: 34, height: 34}
                     .media-body
                       Мыльница с якорем
             %hr
