--- a/app/products.haml
+++ b/app/products.haml
@@ -50,7 +50,7 @@
                 .row
                   .col-md-4.col-sm-6
                     .products__list-item-new{role: 'jump', 'data-href' => 'products_new.html'}
-                      %img.products__list-item-new-image{ src: "images/product-add.svg" }
+                      %img.products__list-item-new-image{ src: "assets/product-add.svg" }
                       %span.products__list-item-new-label
                         Добавить
                   - for i in [1..5]
@@ -59,7 +59,7 @@
                         - if i == 1
                           .products__list-item-notification
                         .products__list-item-image-block
-                          %img.products__list-item-image{ src: "images/product-square.png" }
+                          %img.products__list-item-image{ src: "assets/product-square.png" }
                         .products__list-item-title
                           Мыльница с якорем
                         .products__list-item-price
