Передаем путь для удаления картинки в компонент

--- a/app/products_new.haml
+++ b/app/products_new.haml
@@ -80,7 +80,7 @@
                         .form-group
                           %a.btn.form-control &times;
                 .col-md-4
-                  %div( data-react-class="ImagesForm" data-react-props='{"fieldName": "images[]"}')
+                  %div( data-react-class="ImagesForm" data-react-props='{"imageDeletePath": "/products/image", "fieldName": "images[]"}')
               .products__new-form-actions
                 %button.products__new-form-submit-btn{"data-disable-with" => "Сохраняем...", :type => "submit"}
                   Сохранить
